# vending_terminal

./: CMakeLists.txt  camera.cpp  camera.h  camera_module_settings.json  debug.h  doorLock.cpp  doorLock.h  logger.cpp  logger.h  main.cpp  module.cpp  module.h  sound_manager.cpp  sound_manager.h  start_baive.sh  terminal.cpp  terminal.h  vendor_storage.c  vendor_storage.cpp  vendor_storage.h
log/: setting.json
